spacing error corrected

--- a/css/query.css
+++ b/css/query.css
@@ -68,9 +68,22 @@
         font-size: 40px;
         font-weight: 600;
         line-height: 44px;
-        margin-left: 15px;
-        padding-top: 140px;
     }
+
+    /* MIGHT WORK */
+
+    .pt-10 {
+        padding-top: 10em;
+        padding-left: 2em;
+    }
+    
+    .ps-10 {
+        padding-top: 0em;
+        padding-left: 0em;
+        font-size: 10px;
+    }
+
+    /* MIGHT WORK */
 
     .main__adewale h1 span {
         margin-left: 1em;
@@ -112,6 +125,7 @@
 
         display: flex;
         justify-content: space-between;
+        padding: 70px 0 30px 0;
     }
 
     .main_2 h1 {
@@ -148,7 +162,11 @@
         display: flex;
         justify-content: center;
         color: #36413D;
-        padding-bottom: 12px;
+        padding-bottom: 0px;
+    }
+
+    #Transition {
+        margin-top: -40px;
     }
 
     .main-3_text p {
@@ -196,6 +214,7 @@
 
     .pii p {
         margin-left: 0;
+        padding-left: 0;
         margin-bottom: 20px;
         font-weight: 400;
         font-size: 16px;
@@ -305,8 +324,6 @@
         font-size: 40px;
         font-weight: 600;
         line-height: 44px;
-        margin-left: 15px;
-        padding-top: 140px;
     }
 
     .main__adewale h1 span {
@@ -315,9 +332,6 @@
 
     #line {
         width: 189px;
-        margin-top: 40px;
-        margin-left: -160px;
-        /* margin-top: -40px; */
     }
 
     .sideBar__content {
@@ -342,6 +356,21 @@
         font-weight: 400;
     }
 
+    /* MIGHT WOK */
+
+    .pt-10 {
+        padding-top: 11em;
+        padding-left: 3.5em;
+    }
+    
+    .ps-10 {
+        padding-top: 10em;
+        padding-left: 0em;
+        font-size: 18px;
+    }
+
+    /* MIGHT WOK */
+
     .sideBar__btn {
         display: none;
     }
@@ -349,6 +378,7 @@
     .main_2 {
         display: flex;
         justify-content: space-between;
+        padding: 60px 0 30px 0;
     }
 
     .main_2 h1 {
@@ -425,6 +455,7 @@
 
     .pii p {
         margin-left: 30px;
+        padding: 0;
         font-weight: 400;
         font-size: 16px;
         line-height: 27px;
@@ -473,35 +504,20 @@
 
 @media (min-width: 769px) and (max-width: 992px) {
     
-    .main {
-        justify-content: space-around;
-    }
-    
     .main__adewale h1 {
-        position: absolute;
         font-size: 60px;
         font-weight: 600;
-        line-height: 79px;
-        margin-top: -100px;
-        margin-left: -370px;
-    }
-
-    .main__sideBar {
-        position: absolute;
-        margin-left: 570px;
-        margin-top: 10px;
+        line-height: 60px;
     }
 
     .main__sideBar img {
         height: 100px;
-        margin-bottom: 99px;
     }
 
     .sideBar__content p {
         font-family: "Montserrat";
         font-weight: 600;
-        font-size: 18px;
-        line-height: 25px;
+        line-height: 30px;
         color: white;
     }
 
@@ -509,15 +525,34 @@
         color: white;
         font-family: "Montserrat";
         font-weight: 100;
-        font-size: 12px;
-        line-height: 20px;
+        line-height: 25px;
     }
 
     #line {
         width: 250px;
-        margin-left: -250px;
-        /* margin-top: -80px; */
     }
+
+    /* Might Work */
+
+    .pt-10 {
+        padding-top: 8em;
+        padding-left: 0em;
+    }
+    
+    .ps-10 {
+        padding-top: 20em;
+        padding-left: 0em;
+    }
+
+    #arrowDown {
+        display: none;
+    }
+
+    .main_2 {
+        padding: 50px 0 30px 0;
+    }
+
+    /* Might Work */
 
     #saless {
         height: auto;
@@ -542,47 +577,32 @@
         float: right;
     }
     .pii p {
-        border: 2px solid blue;
-        margin-left: 100px;
+        margin-left: -100px;
+        padding: 0;
         font-weight: 400;
         font-size: 16px;
         line-height: 27px;
     }
 
     .__footer__content-1 h1{
-        border: 2px solid red;
         display: flex;
         justify-content: left;
         font-weight: 500;
         font-size: 64px;
         margin-bottom: 80px;
 }
-}
+    }
 
 @media (min-width: 993px) and (max-width: 1200px) {
 
-    .main {
-        justify-content: space-around;
-    }
-
     .main__adewale h1 {
-        position: absolute;
-        font-size: 65px;
+        font-size: 70px;
         font-weight: 600;
-        line-height: 79px;
-        margin-top: -100px;
-        margin-left: -390px;
-    }
-
-    .main__sideBar {
-        position: absolute;
-        margin-left: 670px;
-        margin-top: 30px;
+        line-height: 59px;
     }
 
     .main__sideBar img {
         height: 100px;
-        margin-bottom: 99px;
     }
 
 
@@ -598,14 +618,31 @@
         color: white;
         font-family: "Montserrat";
         font-weight: 100;
-        font-size: 17px;
+        font-size: 14px;
         line-height: 20px;
     }
 
     #line {
-        width: 250px;
-        margin-left: -250px;
+        width: 290px;
     }
+
+    /* MIGHT WORK */
+
+    .pt-10 {
+        padding-top: 9em;
+        padding-left: 4em;
+    }
+    
+    .ps-10 {
+        padding-top: 7em;
+        padding-left: 11rem;
+    }
+
+    .main_2 {
+        padding: 50px 0 30px 0;
+    }
+
+    /* MIGHT WORK */
 
     #saless {
         height: auto;
@@ -628,8 +665,8 @@
     }
 
     .pii p {
-        /* border: 2px solid blue; */
         margin-left: -50px;
+        padding: 0;
         margin-bottom: 50px;
         font-weight: 400;
         font-size: 28px;
@@ -651,28 +688,18 @@
     
 
     .main__adewale h1 {
-        position: absolute;
         font-size: 85px;
         font-weight: 700;
         line-height: 79px;
-        margin-top: -100px;
-        margin-left: 170px;
     }
 
     #line {
         width: 350px;
-        margin-left: -350px;
-    }
-
-    .main__sideBar {
-        position: relative;
-        margin-top: 100px; 
     }
 
     .sideBar__content p {
         font-family: "Montserrat";
         font-weight: 600;
-        font-size: 32px;
         line-height: 35px;
         color: white;
     }
@@ -681,7 +708,6 @@
         color: white;
         font-family: "Montserrat";
         font-weight: 100;
-        font-size: 24px;
         line-height: 30px;
     }
 
@@ -692,6 +718,7 @@
 
     .pii p {
         margin-left: -180px;
+        padding: 0;
         margin-bottom: 50px;
         font-weight: 400;
         font-size: 28px;
