--- a/css/query3.css
+++ b/css/query3.css
@@ -17,6 +17,16 @@
         margin-left: 0;
         margin-top: 90px;
     }
+
+    #story {
+        margin-bottom: 100px;
+        margin-top: -40px;
+        
+    }
+
+    #story p {
+        font-size: 11px;
+    }
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
